Bug 847611 - Paris bindings for autogenerated events, r=peterv